--- a/AboutUs-en.html
+++ b/AboutUs-en.html
@@ -17,8 +17,8 @@
           <ul>
             <li>
               <a href="#" button onclick="myFunction()" class="Menu">Menu</a></button>
+              <div id="myDiv">
               <ul class="dropdown">
-            <div id="myDiv">
             <li><a href="index-en.html">Frontpage</a></li>
             <li><a href="Products-en.html">Products</a></li>
             <li><a href="News-en.html">News</a></li>
@@ -33,10 +33,10 @@
     <script>
       function myFunction() {
         var x = document.getElementById("myDiv");
-        if (x.style.display === "none") {
-          x.style.display = "block";
-        } else {
+        if (x.style.display === "block") {
           x.style.display = "none";
+        } else {
+          x.style.display = "block";
         }
       }
       </script>
