--- a/Feedback-fi.html
+++ b/Feedback-fi.html
@@ -18,8 +18,8 @@
           <ul>
             <li>
                 <a button onclick="myFunction()" class="Menu">Menu</a></button>
+                <div id="myDiv">
                 <ul class="dropdown">
-              <div id="myDiv">
             <li><a href="index-fi.html">Etusivu</a></li>
             <li><a href="Products-fi.html">Tuotteet</a></li>
             <li><a href="News-fi.html">Uutiset</a></li>
@@ -27,16 +27,17 @@
             <li><a href="Feedback-fi.html">Palaute</a></li>
             <li><a href="Feedback-en.html">Sivu englanniksi</a></li>
           </ul>
+                </div>
         </nav>  
     </header>
 
     <script>
         function myFunction() {
           var x = document.getElementById("myDiv");
-          if (x.style.display === "none") {
-            x.style.display = "block";
-          } else {
+          if (x.style.display === "block") {
             x.style.display = "none";
+          } else {
+            x.style.display = "block";
           }
         }
         </script>
@@ -53,14 +54,14 @@
 
 
 
-<fieldset>
+<fieldset style="width: 200px;">
     <ul>
         <label for="free text">Kerro mielipiteesi:</label><br>
-        <textarea name="instructions" rows="4" cols="60" maxlength="400" id="form-story" placeholder="Kirjoita tähän"></textarea></li>
+        <textarea name="instructions" rows="4" cols="32" maxlength="400" id="form-story" placeholder="Kirjoita tähän"></textarea></li>
     </ul>
 </fieldset>
 
-<fieldset>
+<fieldset style="width: 200px;">
     <ul>
         <li><label for="form-email">Sähköposti: <input type="email" name="email" id="form-email"></label></li>
     </ul>
