--- a/Feedback-en.html
+++ b/Feedback-en.html
@@ -55,16 +55,16 @@
 
 
 
-<fieldset style="width: 375px;">
+<fieldset style="width: 200px;">
     <ul>
-        <label for="free text">Let us know about your opinion:</label><br>
-        <textarea name="instructions" rows="4" cols="60" maxlength="400" id="form-story" placeholder="Type here"></textarea></li>
+        <label for="free text">Kerro mielipiteesi:</label><br>
+        <textarea name="instructions" rows="4" cols="32" maxlength="400" id="form-story" placeholder="Kirjoita tähän"></textarea></li>
     </ul>
 </fieldset>
 
-<fieldset style="width: 375px;">
+<fieldset style="width: 200px;">
     <ul>
-        <li><label for="form-email">Email: <input type="email" name="email" id="form-email"></label></li>
+        <li><label for="form-email">Sähköposti: <input type="email" name="email" id="form-email"></label></li>
     </ul>
 </fieldset>
 
