--- a/Feedback-fi.html
+++ b/Feedback-fi.html
@@ -25,7 +25,7 @@
             <li><a href="News-fi.html">Uutiset</a></li>
             <li><a href="AboutUs-fi.html">Lisää Meistä!</a></li>
             <li><a href="Feedback-fi.html">Palaute</a></li>
-            <li><a href="Feedback-en.html">Sivu englanniksi</a></li>
+            <li><a href="Feedback-en.html">In English</a></li>
           </ul>
                 </div>
         </nav>  
