--- a/index-en.html
+++ b/index-en.html
@@ -40,7 +40,7 @@
     <li><a href="News-en.html">News</a></li>
     <li><a href="AboutUs-en.html">About us</a></li>
     <li><a href="Feedback-en.html">Feedback</a></li>
-    <li><a href="index-fi.html">In Finnish</a></li>
+    <li><a href="index-fi.html">Suomeksi</a></li>
     <script src="logiikka.js"></script>
   </ul>
       </div>
