--- a/Feedback-en.html
+++ b/Feedback-en.html
@@ -25,7 +25,7 @@
             <li><a href="News-en.html">News</a></li>
             <li><a href="AboutUs-en.html">About us</a></li>
             <li><a href="Feedback-en.html">Feedback</a></li>
-            <li><a href="Feedback-fi.html">In Finnish</a></li>
+            <li><a href="Feedback-fi.html">Suomeksi</a></li>
           </ul>
                 </div>
         </nav>  
