--- a/News-en.html
+++ b/News-en.html
@@ -24,7 +24,7 @@
             <li><a href="News-en.html">News</a></li>
             <li><a href="AboutUs-en.html">About us</a></li>
             <li><a href="Feedback-en.html">Feedback</a></li>
-            <li><a href="News-fi.html">In Finnish</a></li>
+            <li><a href="News-fi.html">Suomeksi</a></li>
           </ul>
               </div>
         </nav>  
