--- a/Products-fi.html
+++ b/Products-fi.html
@@ -24,7 +24,7 @@
             <li><a href="News-fi.html">Uutiset</a></li>
             <li><a href="AboutUs-fi.html">Lisää Meistä!</a></li>
             <li><a href="Feedback-fi.html">Palaute</a></li>
-            <li><a href="Products-en.html">Sivu englanniksi</a></li>
+            <li><a href="Products-en.html">In English</a></li>
           </ul>
               </div>
         </nav>  
