--- a/index-fi.html
+++ b/index-fi.html
@@ -36,7 +36,7 @@
     <li><a href="News-fi.html">Uutiset</a></li>
     <li><a href="AboutUs-fi.html">Lisää Meistä!</a></li>
     <li><a href="Feedback-fi.html">Palaute</a></li>
-    <li><a href="index-en.html">Sivu englanniksi</a></li>
+    <li><a href="index-en.html">In English</a></li>
     <script src="logiikka.js"></script>
   </ul>
       </div>
