--- a/Feedback-en.html
+++ b/Feedback-en.html
@@ -57,14 +57,14 @@
 
 <fieldset style="width: 200px;">
     <ul>
-        <label for="free text">Kerro mielipiteesi:</label><br>
+        <label for="free text">Give us your feedback:</label><br>
         <textarea name="instructions" rows="4" cols="32" maxlength="400" id="form-story" placeholder="Kirjoita tähän"></textarea></li>
     </ul>
 </fieldset>
 
 <fieldset style="width: 200px;">
     <ul>
-        <li><label for="form-email">Sähköposti: <input type="email" name="email" id="form-email"></label></li>
+        <li><label for="form-email">Email: <input type="email" name="email" id="form-email"></label></li>
     </ul>
 </fieldset>
 
