--- a/index-fi.html
+++ b/index-fi.html
@@ -68,10 +68,10 @@
 <aside>
 <h2>Meidän Burst</h2>
 <p><span class="day">Laadukkaat ja luontaiset raaka-aineet</span><br>
-<h4>Ei ylimääräisiä ainesosia - meidän Burst juomaamme käytämme puhtaita raaka-aineita kuten stevia makeutusaine</p></h4>
-<p><span class="day">Ei turhia lisäaineita</span><br><h4>Tuotteemme ei sisällä keinotekoisia ainesosia kuten väriaineita</h4></p>
-<p><span class="day">Luontainen makeutus</span><br><h4>Käytämme stevia ja muita luonnon makeutusainesosia. Tuotteesseemme ei sisälly asesulfaami K:ta eikä aspartaamia tai sukraloosia</h4></p>
-<p><span class="day">Herkullinen maku</span><br><h4>Panostamme Burst -juomaamme lähellä luonnon rakkaisiin ja aitoihin makuelämyksiin, jotta voit nauttia meidän shilajit-juomista vapaasti ilman ylimääräisiä jälkimakuja</h4></p>
+<h4>Ei ylimääräisiä ainesosia - meidän Burst juomaamme käytämme puhtaita raaka-aineita kuten stevia makeutusaine.</p></h4>
+<p><span class="day">Ei turhia lisäaineita</span><br><h4>Tuotteemme ei sisällä keinotekoisia ainesosia kuten väriaineita.</h4></p>
+<p><span class="day">Luontainen makeutus</span><br><h4>Käytämme steviaa ja muita luonnon makeutusainesosia. Tuotteemme ei sisällä asesulfaami K:ta, aspartaamia tai sukraloosia</h4></p>
+<p><span class="day">Herkullinen maku</span><br><h4>Panostamme Burst -juomaamme luonnonläheisiin ja aitoihin makuelämyksiin, jotta voit nauttia meidän shilajit-juomista vapaasti ilman ylimääräisiä jälkimakuja</h4></p>
 <p><span class="day">Shilajit vaikutukset & Käytettävyys</span><br><h4>Oletko väsynyt? Onko pitkiä päiviä? Oli päiväsi tai olosi mikä tahansa, Burst -tuotteemme tuo jokapäiväiseen arkeen boostia ja vahvistaa sinua entistä enemmän. Ota BURST!</h4></p>
 </aside>
 
