--- a/index-fi.html
+++ b/index-fi.html
@@ -68,7 +68,7 @@
 <aside>
 <h2>Meidän Burst</h2>
 <p><span class="day">Laadukkaat ja luontaiset raaka-aineet</span><br>
-<h4>Ei ylimääräisiä ainesosia - meidän Burst juomaamme käytämme puhtaita raaka-aineita kuten stevia makeutusaine.</p></h4>
+<h4>Ei ylimääräisiä ainesosia - meidän Burst juomassamme käytämme puhtaita raaka-aineita kuten stevia makeutusainetta.</p></h4>
 <p><span class="day">Ei turhia lisäaineita</span><br><h4>Tuotteemme ei sisällä keinotekoisia ainesosia kuten väriaineita.</h4></p>
 <p><span class="day">Luontainen makeutus</span><br><h4>Käytämme steviaa ja muita luonnon makeutusainesosia. Tuotteemme ei sisällä asesulfaami K:ta, aspartaamia tai sukraloosia</h4></p>
 <p><span class="day">Herkullinen maku</span><br><h4>Panostamme Burst -juomaamme luonnonläheisiin ja aitoihin makuelämyksiin, jotta voit nauttia meidän shilajit-juomista vapaasti ilman ylimääräisiä jälkimakuja</h4></p>
